[tool.poetry]
name = "metodo-hungaro-api"
version = "0.1.0"
description = ""
authors = ["Rey Halsall <reyeduardohalsallquintero8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic = "^2.5.2"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
